avoid collapsing the nav bar

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -4,7 +4,7 @@ html, body {
 
 body {
 	height: 100%;
-	min-width: 860px;
+	min-width: 900px;
 }
 
 *, *:before, *:after {
